Solve page break on long string search

--- a/app/design/frontend/Magento/luma/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Theme/web/css/source/_module.less
@@ -503,6 +503,7 @@
         > .page-title-wrapper {
             .page-title {
                 display: inline-block;
+                word-break: break-all;
             }
 
             .page-title + .action {
